Fix spacing

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -36,3 +36,7 @@ ion-nav.root {
     padding-top: 100px !important;
   }
 }
+
+.ion-page .content.padding > div {
+  padding-top: 156px !important;
+}
